--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-	"name": "meteor-bitli",
-	"description": "Bitly clone in meteor and react",
-	"private": true,
-	"scripts": {
-		"start": "meteor run"
-	},
-	"dependencies": {
-		"babel-runtime": "^6.20.0",
-		"connect-route": "0.1.5",
-		"meteor-node-stubs": "~0.2.4",
-		"react": "15.6.1",
-		"react-dom": "15.6.1",
-		"valid-url": "1.0.9"
-	}
+  "name": "meteor-bitli",
+  "description": "Bitly clone in meteor and react",
+  "private": true,
+  "scripts": {
+    "start": "meteor run"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.20.0",
+    "connect-route": "0.1.5",
+    "meteor-node-stubs": "~0.2.4",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-router": "3.0.0",
+    "valid-url": "1.0.9"
+  }
 }
