--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-router": "3.0.0",
+    "simpl-schema": "0.0.3",
     "valid-url": "1.0.9"
   }
 }
